# attendance-management

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260420_0001_initial_auth_schema.py  20260421_0002_attendance_tables.py  20260421_0003_requests.py  20260421_0004_overtime.py  20260421_0005_leave_balances.py  20260421_0006_shifts.py  20260421_0007_closings.py  20260421_0008_revoked_access_tokens.py  20260421_0009_audit_append_only.py
backend/app/: main.py  seeds.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/jobs/: scheduler.py
backend/app/models/: __init__.py  attendance_punch.py  audit_log.py  daily_attendance.py  department.py  employee.py  employment_type.py  holiday.py  leave_balance.py  monthly_closing.py  overtime_alert.py  request.py  revoked_access_token.py  shift.py  users_session.py
backend/app/schemas/: attendance.py  auth.py  closings.py  employee.py  leaves.py  masters.py  overtime.py  request.py  shifts.py
backend/app/services/: attendance.py  audit.py  auth.py  closings.py  employee.py  flex.py  leaves.py  notifier.py  overtime.py  shifts.py  (+1 more)
backend/tests/: conftest.py  test_attendance_api.py  test_attendance_service.py  test_auth.py  test_closings.py  test_critical_fixes.py  test_employees.py  test_health.py  test_leaves.py  test_overtime.py  test_requests.py  test_security_hardening.py  test_shifts.py
(+40 files in other folders)
